--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:maxSdkVersion="18" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -27,10 +27,6 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ListarTodos"
-            android:label="@string/title_activity_listar_todos"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
             android:name=".MainActivity"
             android:label="MainActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -41,6 +37,14 @@
         <activity
             android:name=".Pesquisar"
             android:label="@string/title_activity_pesquisar"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Editar"
+            android:label="@string/title_activity_editar"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Listar"
+            android:label="@string/title_activity_listar"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
